<resources>
    <string name="app_name">CAR GAME</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="hints">Hints</string>
    <string name="activity_name">Enter Name Here</string>

    <string name="identify_the_car_image">Identify the Car Image</string>
    <string name="identify_the_car_make">Identify the Car Make</string>
    <string name="my_activity_title">My Activity Title</string>
    <string name="identify">Identify</string>
    <string name="car_images">car images</string>
    <string name="submit">Submit</string>
    <string name="hints_text_field">Guess a letter?</string>
    <string name="life">LIFE:</string>
    <string name="third_random_car_image">third random car image</string>
    <string name="first_random_car_image">first random car image</string>
    <string name="second_random_car_image">second random car image</string>


    <string-array name="carMake_array">
        <item>Audi</item>
        <item>Mercedes</item>
        <item>BMW</item>
        <item>Toyota</item>
        <item>Jeep</item>
        <item>Tesla</item>
        <item>Honda</item>
        <item>Nissan</item>
    </string-array>


</resources>