<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_identify_image"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        android:onClick="onClick"
        android:text="@string/identify_the_car_image"
        android:textColor="#9C27B0"
        android:textColorHighlight="#9C27B0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#22FFCB"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_hints" />

    <Button
        android:id="@+id/button_hints"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        android:onClick="onClick"
        android:text="@string/hints"
        android:textColor="#9C27B0"
        android:textColorHighlight="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#22FFCB"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_identify_make" />

    <Button
        android:id="@+id/button_adv_level"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        android:onClick="onClick"
        android:text="@string/advanced_level"
        android:textColor="#9C27B0"
        android:textColorHighlight="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#22FFCB"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_identify_image"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_identify_make"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="276dp"
        android:onClick="onClick"
        android:text="@string/identify_the_car_make"
        android:textColor="#9C27B0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#22FFCB"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/timer_switch"
        android:layout_width="115dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:scrollbarStyle="outsideInset"
        android:text="  TIMER"
        android:textColor="#FFFF00"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="306dp"
        android:layout_height="218dp"
        app:layout_constraintBottom_toTopOf="@+id/button_identify_make"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/app_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>