<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:label="@string/my_activity_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarMakeActivity">

    <ImageView
        android:id="@+id/imageView_car"
        android:layout_width="398dp"
        android:layout_height="262dp"
        android:contentDescription="@string/car_images"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <Button
        android:id="@+id/identify_button"
        android:layout_width="308dp"
        android:layout_height="79dp"
        android:text="@string/identify"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_car"
        app:layout_constraintVertical_bias="0.604" />

    <Spinner
        android:id="@+id/carMake_spinner"
        android:layout_width="243dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toTopOf="@+id/identify_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_car" />

    <TextView
        android:id="@+id/prgressView"
        android:layout_width="132dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_car"
        app:layout_constraintEnd_toStartOf="@+id/timeView_01"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/timeView_01"
        android:layout_width="132dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:cursorVisible="false"
        android:gravity="center"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageView_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>