<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".CarImageActivity">

    <Button
        android:id="@+id/carimage_button"
        android:layout_width="308dp"
        android:layout_height="79dp"
        android:layout_marginBottom="16dp"
        android:onClick="submitCorrectCarImage"
        android:text="@string/next"
        android:textSize="24sp"
        app:backgroundTint="#E8165D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carimageButton3"
        app:layout_constraintVertical_bias="0.7"
        app:rippleColor="#00FFFFFF"
        app:strokeColor="#970C3D"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/timeView_3"
        android:layout_width="66dp"
        android:layout_height="30dp"
        android:cursorVisible="false"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/carMake_textview"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <ImageButton
        android:id="@+id/carimageButton1"
        android:layout_width="230dp"
        android:layout_height="160dp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/first_random_car_image"
        android:onClick="selectCarImage"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carMake_textview"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/carimageButton2"
        android:layout_width="230dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/second_random_car_image"
        android:onClick="selectCarImage"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carimageButton1"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/carimageButton3"
        android:layout_width="230dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/third_random_car_image"
        android:onClick="selectCarImage"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carimageButton2"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>